--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OOP JS, MODULES AND BUNDLING</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="css/grid.css" rel="stylesheet">
-    <link href="css/main.css.map" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/grid.css" rel="stylesheet" />
+    <link href="css/main.css.map" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
     <script defer type="module" src="js/main.js"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="quiz-container">
+      <h1>Quiz</h1>
+      <form id="quiz-form" onsubmit="return false;">
+        <div id="questions-container">
+          <!-- Questions and options will be rendered here -->
+        </div>
+        <button type="submit" id="submit-btn">Submit Answers</button>
+      </form>
+
+      <button id="reset-btn">Reset Quiz</button>
+      <div id="result-container" style="display: none"></div>
+    </div>
+  </body>
 </html>
