--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="css/grid.css" rel="stylesheet" />
-    <link href="css/main.css.map" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/main.css.map" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <script defer type="module" src="js/main.js"></script>
   </head>
   <body>
+<header class="heading">
+  <h1>WWE</h1>
+</header>
+
     <div id="quiz-container">
-      <h1>Quiz</h1>
+      <h2>Quiz</h2>
       <form id="quiz-form" onsubmit="return false;">
         <div id="questions-container">
         </div>
