--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   </head>
   <body>
 <header class="heading">
-  <h1>WWE</h1>
+  <h1> QUIZ TIME FOR - WWE CHAMPIONSHIP!</h1>
 </header>
 
     <div id="quiz-container">
-      <h2>Quiz</h2>
+      <h2 class="hidden">Quiz</h2>
       <form id="quiz-form" onsubmit="return false;">
         <div id="questions-container">
         </div>
@@ -30,7 +30,11 @@
 
       <button id="reset-btn">Reset Quiz</button>
       <div id="result-container" style="display: none"></div>
-    </div>
+    </div> 
+<!-- footer -->
+    <footer class="copyright">
+      <div class="footer-copyright">@2024 Copyright- WWE NETWORK.</div>
+    </footer>
     <!-- js -->
       <script defer type="module" src="js/main.js"></script>
   </body>
