--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
   <title>OOP JS, MODULES AND BUNDLING</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/main.css.map" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <script defer type="module" src="js/main.js"></script>
+
 </head>
 
 <body>
   <header class="heading">
-    <h1>WWE</h1>
+    <h1> QUIZ TIME FOR - WWE CHAMPIONSHIP!</h1>
   </header>
 
   <div id="quiz-container">
-    <h2>Quiz</h2>
+    <h2 class="hidden">Quiz</h2>
     <form id="quiz-form" onsubmit="return false;">
       <div id="questions-container">
       </div>
@@ -35,6 +31,12 @@
     <button id="reset-btn">Reset Quiz</button>
     <div id="result-container" style="display: none"></div>
   </div>
+  <!-- footer -->
+  <footer class="copyright">
+    <div class="footer-copyright">@2024 Copyright- WWE NETWORK.</div>
+  </footer>
+  <!-- js -->
+  <script defer type="module" src="js/main.js"></script>
 </body>
 
 </html>
