--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <form id="quiz-form" onsubmit="return false;">
       <div id="questions-container">
       </div>
+      <div id="quiz-status">
+        <p id="answered-info"></p>
+      </div>
       <button type="submit" id="submit-btn">Submit Answers</button>
     </form>
 
@@ -32,7 +35,7 @@
     <div id="result-container" style="display: none"></div>
   </div>
 
-  <footer class="copyright">
+  <footer class="copyright col-span-full l-col-span-full">
     <div class="footer-copyright">@2024 Copyright - WWE NETWORK.</div>
   </footer>
 
